force-app/main/default/objects/Business_Plan__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>